# lab06HW

./: .appveyor.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CPackConfig.cmake
_build/: CMakeCache.txt  Makefile  cmake_install.cmake
_build/hello_world_application/: Makefile  cmake_install.cmake
_build/solver_application/: Makefile  cmake_install.cmake
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
