cmake_minimum_required(VERSION 3.4)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
projcet(formatter_ex)
add_library(formatter_ex STATIC formatter_ex.cpp)
add_subdirectory(/../formatter_lib /formatter)
target_include_directories(formatter_ex PUBLIC )
target_link_libraries(formatter_ex formatter)
